<resources>    <string name="_headlines">Headlines</string>    <string name="_name">Name</string>    <string name="_description">Description</string>    <string name="_ingredient"> Ingredient</string>    <string name="_fats">Fats</string>    <string name="_rating">Rating</string>    <string name="_proteins">Proteins</string>    <string name="_favorites">Favorites</string>    <string name="app_name">RecipeMe</string>    <string name="_calories">Calories</string></resources>