<?xml version="1.0" encoding="utf-8"?><RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:app="http://schemas.android.com/apk/res-auto"    xmlns:tools="http://schemas.android.com/tools"    android:layout_width="match_parent"    android:layout_height="match_parent"    android:background="@color/viewBg"    app:layout_behavior="@string/appbar_scrolling_view_behavior"    tools:showIn="@layout/activity_detail">    <ScrollView        android:layout_width="match_parent"        android:layout_height="match_parent">        <LinearLayout            android:layout_width="match_parent"            android:layout_height="match_parent"            android:orientation="vertical">            <TextView                android:id="@+id/recip_headlines"                android:layout_width="match_parent"                android:layout_height="wrap_content"                android:layout_marginLeft="@dimen/layout_margin_left"                android:layout_marginTop="10dp"                android:text="@string/_headlines"                android:textAlignment="center"                android:textColor="#333333"                android:textSize="23sp"                android:textStyle="bold" />            <TextView                android:id="@+id/recipe_headlines"                android:layout_width="match_parent"                android:layout_height="wrap_content"                android:layout_marginLeft="@dimen/layout_margin_left"                android:layout_marginTop="3dp"                android:textAlignment="center"                android:textSize="17sp"                android:textStyle="normal" />            <TextView                android:id="@+id/recipe_description"                android:layout_width="match_parent"                android:layout_height="wrap_content"                android:layout_marginLeft="@dimen/layout_margin_left"                android:layout_marginTop="4dp"                android:text="Description"                android:textAlignment="center"                android:textColor="#333333"                android:textSize="23sp"                android:textStyle="bold" />            <TextView                android:id="@+id/recip_description"                android:layout_width="match_parent"                android:layout_height="wrap_content"                android:layout_marginLeft="@dimen/layout_margin_left"                android:layout_marginTop="8dp"                android:textAlignment="center"                android:textSize="17sp"                android:textStyle="normal" />            <TextView                android:id="@+id/recipe_name"                android:layout_width="match_parent"                android:layout_height="wrap_content"                android:layout_below="@+id/recip_description"                android:layout_marginLeft="@dimen/layout_margin_left"                android:layout_marginTop="4dp"                android:text="@string/_name"                android:textAlignment="center"                android:textColor="#333333"                android:textSize="23sp"                android:textStyle="bold" />            <TextView                android:id="@+id/recip_name"                android:layout_width="match_parent"                android:layout_height="wrap_content"                android:layout_below="@+id/recip_description"                android:layout_marginLeft="@dimen/layout_margin_left"                android:textAlignment="center"                android:textSize="17sp"                android:textStyle="normal" />            <TextView                android:id="@+id/recipe_ingredient"                android:layout_width="match_parent"                android:layout_height="wrap_content"                android:layout_below="@+id/recip_name"                android:layout_marginLeft="@dimen/layout_margin_left"                android:layout_marginTop="4dp"                android:text="@string/_ingredient"                android:textAlignment="center"                android:textColor="#333333"                android:textSize="23sp"                android:textStyle="bold" />            <TextView                android:id="@+id/recip_ingredient"                android:layout_width="match_parent"                android:layout_height="wrap_content"                android:layout_below="@+id/recip_name"                android:layout_marginLeft="@dimen/layout_margin_left"                android:layout_marginTop="@dimen/layout_margin_top2"                android:textAlignment="center"                android:textSize="17sp"                android:textStyle="normal" />            <TextView                android:id="@+id/recipe_favorites"                android:layout_width="match_parent"                android:layout_height="wrap_content"                android:layout_below="@+id/recip_ingredient"                android:layout_marginLeft="@dimen/layout_margin_left"                android:layout_marginTop="@dimen/layout_margin_top"                android:text="@string/_favorites"                android:textAlignment="center"                android:textColor="#333333"                android:textSize="23sp"                android:textStyle="bold" />            <TextView                android:id="@+id/recip_favorites"                android:layout_width="match_parent"                android:layout_height="wrap_content"                android:layout_below="@+id/recip_ingredient"                android:layout_marginLeft="@dimen/layout_margin_left"                android:layout_marginTop="@dimen/layout_margin_top"                android:textAlignment="center"                android:textSize="17sp"                android:textStyle="normal" />            <TextView                android:id="@+id/recipe_proteins"                android:layout_width="match_parent"                android:layout_height="wrap_content"                android:layout_below="@+id/recip_favorite"                android:layout_marginLeft="@dimen/layout_margin_left"                android:layout_marginTop="@dimen/layout_margin_top2"                android:text="@string/_proteins"                android:textAlignment="center"                android:textColor="#333333"                android:textSize="23sp"                android:textStyle="bold" />            <TextView                android:id="@+id/recip_proteins"                android:layout_width="match_parent"                android:layout_height="wrap_content"                android:layout_below="@+id/recip_favorite"                android:layout_marginLeft="@dimen/layout_margin_left"                android:textAlignment="center"                android:textSize="17sp"                android:textStyle="normal" />            <TextView                android:id="@+id/recipe_calories"                android:layout_width="match_parent"                android:layout_height="wrap_content"                android:layout_below="@+id/recip_proteins"                android:layout_marginLeft="@dimen/layout_margin_left"                android:layout_marginTop="@dimen/layout_margin_top"                android:layout_marginBottom="4dp"                android:text="@string/_calories"                android:textColor="#333333"                android:textAlignment="center"                android:textStyle="bold"                android:textSize="23sp" />            <TextView                android:id="@+id/recip_calories"                android:layout_width="match_parent"                android:layout_height="wrap_content"                android:layout_below="@+id/recip_proteins"                android:layout_marginLeft="@dimen/layout_margin_left"                android:textAlignment="center"                android:textStyle="normal"                android:textSize="17sp" />        </LinearLayout>    </ScrollView></RelativeLayout>